# LocalServerSocket

./: .gitmodules  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Makefile  README.md  Socket.cpp  conanfile.py  simple_client_main.cpp  simple_server_main.cpp
.github/: CODEOWNERS
ServerClient/: CMakeLists.txt
ServerClient/Include/: ServerSocket.h  Socket.h  SocketException.h
ServerClient/Sources/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp
